- update lib - fix some deprecate - project can compile now(tested with jdk 21)