@@ -20,20 +20,15 @@
  */
 package net.sf.dynamicreports.test.jasper.subtotal;
 
-import static net.sf.dynamicreports.report.builder.DynamicReports.col;
-import static net.sf.dynamicreports.report.builder.DynamicReports.sbt;
-import static net.sf.dynamicreports.report.builder.DynamicReports.type;
-
 import java.io.Serializable;
 import java.math.BigDecimal;
 import java.util.Locale;
-
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.TestInstance;
-
 import net.sf.dynamicreports.jasper.builder.JasperReportBuilder;
 import net.sf.dynamicreports.report.base.expression.AbstractSimpleExpression;
 import net.sf.dynamicreports.report.base.expression.AbstractValueFormatter;
+import static net.sf.dynamicreports.report.builder.DynamicReports.col;
+import static net.sf.dynamicreports.report.builder.DynamicReports.sbt;
+import static net.sf.dynamicreports.report.builder.DynamicReports.type;
 import net.sf.dynamicreports.report.builder.column.TextColumnBuilder;
 import net.sf.dynamicreports.report.builder.subtotal.AggregationSubtotalBuilder;
 import net.sf.dynamicreports.report.constant.Calculation;
@@ -41,6 +36,8 @@ import net.sf.dynamicreports.report.datasource.DRDataSource;
 import net.sf.dynamicreports.report.definition.ReportParameters;
 import net.sf.dynamicreports.test.jasper.AbstractJasperValueTest;
 import net.sf.jasperreports.engine.JRDataSource;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestInstance;
 
 /**
  * @author Ricardo Mariaca
@@ -175,7 +172,7 @@ public class Subtotal1Test extends AbstractJasperValueTest implements Serializab
 
         @Override
         public Integer evaluate(ReportParameters reportParameters) {
-            return new Integer(((String) reportParameters.getValue("field2")).substring(1));
+            return Integer.valueOf(((String) reportParameters.getValue("field2")).substring(1));
         }
     }
 }
